--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   
 
-  <section>
+  <!-- <section>
     <h1>Visualizations</h1>
     <hr>
     <div>
@@ -52,8 +52,18 @@
             <img width="200" src="Resources\assets\images\Fig4.png"/>
         </a>
     </div>
-  </section>
+  </section> -->
 
+
+    
+    <img src="Resources\assets\images\Fig1.png"/>
+
+    <img src="Resources\assets\images\Fig2.png"/>
+
+    <img src="Resources\assets\images\Fig3.png"/>
+
+    <img src="Resources\assets\images\Fig4.png"/>
+    
 
 <!-- Comparisons page -->
 
@@ -61,19 +71,18 @@
   <section>
       <h1>Comparison: Latitude vs X</h1>
     <hr>
-    <h2>Horizontal Rule Tags</h2>
     <div>
         <a href="link">
-            <img width="200" src="link"/>
+            <img width="200" src="Resources\assets\images\Fig1.png"/>
         </a>
         <a href="link">
-            <img width="200" src="link"/>
+            <img width="200" src="Resources\assets\images\Fig2.png"/>
         </a>
         <a href="link">
-            <img width="200" src="link"/>
+            <img width="200" src="Resources\assets\images\Fig3.png"/>
         </a>
         <a href="link">
-            <img width="200" src="link"/>
+            <img width="200" src="Resources\assets\images\Fig4.png"/>
         </a>
     </div>
   </section>
@@ -93,9 +102,16 @@
     </p>
     <table border="1">
       <tr>
-        <th>Company</th>
-        <th>Contact</th>
-        <th>Email</th>
+        <th>City_ID</th>
+        <th>City</th>
+        <th>Cloudiness</th>
+        <th>Country</th>
+        <th>Date</th>
+        <th>Humidity</th>
+        <th>Lat</th>
+        <th>Lng</th>
+        <th>Max Temp</th>
+        <th>Wind Speed</th>
       </tr>
     </table>
   </section>
